--- a/sample2.html
+++ b/sample2.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
     <head>
         <title>Example Page on Threat Modeling</title>
@@ -106,7 +107,7 @@
                 1.The RESTful API I use is GeoNames API <br>
                 2.The APIs use RESTful protocol and responses vary in format between XML, JSON, CSV, and TXT <br>
                 3.USER->fname,lname,dob,email,password<br>
-                  GeoInfo->ID,location,Country,city,weather,coordination<br>
+                  GeoInfo->ID,location,Country,city,weather,coordination.<br>
                 </p>
 
             </section>
